--- a/main.html
+++ b/main.html
@@ -1,16 +1,167 @@
 <!DOCTYPE html>
+<html lang="en">
+  <head>
+    <!-- Required meta tags -->
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-<html>
+    <!-- Bootstrap CSS -->
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
+      crossorigin="anonymous"
+    />
+      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/css/bootstrap.min.css">
+    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.8.2/css/lightbox.min.css">
 
-<head>
-	<link rel="stylesheet" href="styles.css">
-</head>
+    <title>Card Gallery</title>
+  </head>
+  <body>
+    <h2 class="text-center">Cards Gallery</h2>
+    <div class="container">
+      <div class="row photos">
+        <div class="col-lg-4">
+          <div class="card h-100 rounded-3">
+            <a
+              href="https://storage.googleapis.com/acciojob-open-file-collections/image1.jpg"
+              data-lightbox="photos"
+            >
+              <img
+                src="https://storage.googleapis.com/acciojob-open-file-collections/image1.jpg"
+                class="card-img-top img-fluid"
+              />
+            </a>
+            <div class="card-body">
+              <h6 class="card-title text-center">Card title</h6>
+              <p class="card-text text-center">
+                This is a longer card with supporting text below as a natural
+                lead-in to additional content. This content is a little bit
+                longer.
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-4">
+          <div class="card h-100 rounded-3">
+             <a
+              href="https://storage.googleapis.com/acciojob-open-file-collections/image2.jpg"
+              data-lightbox="photos"
+            >
+            <img
+              src="https://storage.googleapis.com/acciojob-open-file-collections/image2.jpg"
+              class="card-img-top img-fluid"
+            
+            /></a>
+            <div class="card-body">
+              <h6 class="card-title text-center">Card title</h6>
+              <p class="card-text text-center">This is a short card.</p>
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-4 ">
+          <div class="card h-100 rounded-3">
+             <a
+              href="https://storage.googleapis.com/acciojob-open-file-collections/image3.jpg"
+              data-lightbox="photos"
+            >
+            <img
+              src="https://storage.googleapis.com/acciojob-open-file-collections/image3.jpg"
+              class="card-img-top img-fluid"
+              alt="..."
+            /></a>
+            <div class="card-body">
+              <h6 class="card-title text-center">Card title</h6>
+              <p class="card-text text-center">
+                This is a longer card with supporting text below as a natural
+                lead-in to additional content.
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-4">
+          <div class="card h-100 rounded-3">
+              <a
+              href="https://storage.googleapis.com/acciojob-open-file-collections/image4.jpg"
+              data-lightbox="photos"
+            >
+            <img
+              src="https://storage.googleapis.com/acciojob-open-file-collections/image4.jpg"
+              class="card-img-top img-fluid"
+              alt="..."
+            /></a>
+            <div class="card-body">
+              <h6 class="card-title text-center">Card title</h6>
+              <p class="card-text text-center">
+                This is a longer card with supporting text below as a natural
+                lead-in to additional content. This content is a little bit
+                longer.
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-4 ">
+          <div class="card h-100 rounded-3">
+             <a
+              href="https://storage.googleapis.com/acciojob-open-file-collections/image5.jpg"
+              data-lightbox="photos"
+            >
+            <img
+              src="https://storage.googleapis.com/acciojob-open-file-collections/image5.jpg"
+              class="card-img-top img-fluid"
+              alt="..."
+            /></a>
+            <div class="card-body">
+              <h6 class="card-title text-center">Card title</h6>
+              <p class="card-text text-center">
+                This is a longer card with supporting text below as a natural
+                lead-in to additional content. This content is a little bit
+                longer.
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-4">
+          <div class="card h-100 rounded-3">
+              <a
+              href="https://storage.googleapis.com/acciojob-open-file-collections/image6.jpg"
+              data-lightbox="photos"
+            >
+            <img
+              src="https://storage.googleapis.com/acciojob-open-file-collections/image6.jpg"
+              class="card-img-top img-fluid"
+              alt="..."
+            /></a>
+            <div class="card-body">
+              <h6 class="card-title text-center">Card title</h6>
+              <p class="card-text text-center">
+                This is a longer card with supporting text below as a natural
+                lead-in to additional content. This content is a little bit
+                longer.
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
 
-<body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
+    <!-- Optional JavaScript; choose one of the two! -->
 
-</body>
+    <!-- Option 1: Bootstrap Bundle with Popper -->
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+      crossorigin="anonymous"
+    ></script>
 
+     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/js/bootstrap.bundle.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.8.2/js/lightbox.min.js"></script>
+    <!-- Option 2: Separate Popper and Bootstrap JS -->
+    <!--
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
+    -->
+  </body>
 </html>
