--- a/main.html
+++ b/main.html
@@ -12,9 +12,15 @@
       integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/css/bootstrap.min.css">
-    <link rel="stylesheet" href="assets/css/style.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.8.2/css/lightbox.min.css">
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/css/bootstrap.min.css"
+    />
+    <link rel="stylesheet" href="assets/css/style.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.8.2/css/lightbox.min.css"
+    />
 
     <title>Card Gallery</title>
   </head>
@@ -22,115 +28,112 @@
     <h2 class="text-center">Cards Gallery</h2>
     <div class="container">
       <div class="row photos">
-        <div class="col-lg-4">
-          <div class="card h-5 rounded-3">
-            <a
-              href="https://storage.googleapis.com/acciojob-open-file-collections/image1.jpg"
-              data-lightbox="photos"
-            >
-              <img
-                src="https://storage.googleapis.com/acciojob-open-file-collections/image1.jpg"
-                class="card-img-top img-fluid"
-              />
-            </a>
-            <div class="card-body">
-              <h6 class="card-title text-center">Card title</h6>
-              <p class="card-text text-center">
-                This is a longer card with supporting text below as a natural
-                lead-in to additional content. This content is a little bit
-                longer.
-              </p>
-            </div>
+        <div class="card h-5 rounded-3 col-lg-4">
+          <a
+            href="https://storage.googleapis.com/acciojob-open-file-collections/image1.jpg"
+            data-lightbox="photos"
+          >
+            <img
+              src="https://storage.googleapis.com/acciojob-open-file-collections/image1.jpg"
+              class="card-img-top img-fluid"
+            />
+          </a>
+          <div class="card-body">
+            <h6 class="card-title text-center">Card title</h6>
+            <p class="card-text text-center">
+              This is a longer card with supporting text below as a natural
+              lead-in to additional content. This content is a little bit
+              longer.
+            </p>
           </div>
-          <div class="card h-5 rounded-3">
-             <a
-              href="https://storage.googleapis.com/acciojob-open-file-collections/image2.jpg"
-              data-lightbox="photos"
-            >
+        </div>
+        <div class="card h-5 rounded-3 col-lg-4">
+          <a
+            href="https://storage.googleapis.com/acciojob-open-file-collections/image2.jpg"
+            data-lightbox="photos"
+          >
             <img
               src="https://storage.googleapis.com/acciojob-open-file-collections/image2.jpg"
               class="card-img-top img-fluid"
-            
-            /></a>
-            <div class="card-body">
-              <h6 class="card-title text-center">Card title</h6>
-              <p class="card-text text-center">This is a short card.</p>
-            </div>
+          /></a>
+          <div class="card-body">
+            <h6 class="card-title text-center">Card title</h6>
+            <p class="card-text text-center">This is a short card.</p>
           </div>
-          <div class="card h-5 rounded-3">
-             <a
-              href="https://storage.googleapis.com/acciojob-open-file-collections/image3.jpg"
-              data-lightbox="photos"
-            >
+        </div>
+        <div class="card h-5 rounded-3 col-lg-4">
+          <a
+            href="https://storage.googleapis.com/acciojob-open-file-collections/image3.jpg"
+            data-lightbox="photos"
+          >
             <img
               src="https://storage.googleapis.com/acciojob-open-file-collections/image3.jpg"
               class="card-img-top img-fluid"
               alt="..."
-            /></a>
-            <div class="card-body">
-              <h6 class="card-title text-center">Card title</h6>
-              <p class="card-text text-center">
-                This is a longer card with supporting text below as a natural
-                lead-in to additional content.
-              </p>
-            </div>
+          /></a>
+          <div class="card-body">
+            <h6 class="card-title text-center">Card title</h6>
+            <p class="card-text text-center">
+              This is a longer card with supporting text below as a natural
+              lead-in to additional content.
+            </p>
           </div>
-          <div class="card h-5 rounded-3">
-              <a
-              href="https://storage.googleapis.com/acciojob-open-file-collections/image4.jpg"
-              data-lightbox="photos"
-            >
+        </div>
+        <div class="card h-5 rounded-3 col-lg-4">
+          <a
+            href="https://storage.googleapis.com/acciojob-open-file-collections/image4.jpg"
+            data-lightbox="photos"
+          >
             <img
               src="https://storage.googleapis.com/acciojob-open-file-collections/image4.jpg"
               class="card-img-top img-fluid"
               alt="..."
-            /></a>
-            <div class="card-body">
-              <h6 class="card-title text-center">Card title</h6>
-              <p class="card-text text-center">
-                This is a longer card with supporting text below as a natural
-                lead-in to additional content. This content is a little bit
-                longer.
-              </p>
-            </div>
+          /></a>
+          <div class="card-body">
+            <h6 class="card-title text-center">Card title</h6>
+            <p class="card-text text-center">
+              This is a longer card with supporting text below as a natural
+              lead-in to additional content. This content is a little bit
+              longer.
+            </p>
           </div>
-          <div class="card h-5 rounded-3">
-             <a
-              href="https://storage.googleapis.com/acciojob-open-file-collections/image5.jpg"
-              data-lightbox="photos"
-            >
+        </div>
+        <div class="card h-5 rounded-3 col-lg-4">
+          <a
+            href="https://storage.googleapis.com/acciojob-open-file-collections/image5.jpg"
+            data-lightbox="photos"
+          >
             <img
               src="https://storage.googleapis.com/acciojob-open-file-collections/image5.jpg"
               class="card-img-top img-fluid"
               alt="..."
-            /></a>
-            <div class="card-body">
-              <h6 class="card-title text-center">Card title</h6>
-              <p class="card-text text-center">
-                This is a longer card with supporting text below as a natural
-                lead-in to additional content. This content is a little bit
-                longer.
-              </p>
-            </div>
+          /></a>
+          <div class="card-body">
+            <h6 class="card-title text-center">Card title</h6>
+            <p class="card-text text-center">
+              This is a longer card with supporting text below as a natural
+              lead-in to additional content. This content is a little bit
+              longer.
+            </p>
           </div>
-          <div class="card h-5 rounded-3">
-              <a
-              href="https://storage.googleapis.com/acciojob-open-file-collections/image6.jpg"
-              data-lightbox="photos"
-            >
+        </div>
+        <div class="card h-5 rounded-3 col-lg-4">
+          <a
+            href="https://storage.googleapis.com/acciojob-open-file-collections/image6.jpg"
+            data-lightbox="photos"
+          >
             <img
               src="https://storage.googleapis.com/acciojob-open-file-collections/image6.jpg"
               class="card-img-top img-fluid"
               alt="..."
-            /></a>
-            <div class="card-body">
-              <h6 class="card-title text-center">Card title</h6>
-              <p class="card-text text-center">
-                This is a longer card with supporting text below as a natural
-                lead-in to additional content. This content is a little bit
-                longer.
-              </p>
-            </div>
+          /></a>
+          <div class="card-body">
+            <h6 class="card-title text-center">Card title</h6>
+            <p class="card-text text-center">
+              This is a longer card with supporting text below as a natural
+              lead-in to additional content. This content is a little bit
+              longer.
+            </p>
           </div>
         </div>
       </div>
@@ -145,7 +148,7 @@
       crossorigin="anonymous"
     ></script>
 
-     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/js/bootstrap.bundle.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.8.2/js/lightbox.min.js"></script>
     <!-- Option 2: Separate Popper and Bootstrap JS -->
